Updated code with a few revisions

--- a/HTML/Rahid To Do List.html
+++ b/HTML/Rahid To Do List.html
@@ -29,10 +29,12 @@
     <li id="todo5">Assist mother with chores and cleaning the house.
       <button onclick="Task1Complete('todo5')">Complete
       </button>
-
     </li>
   </ol>
-
+  <button onclick="addnew()">Add Item
+  </button>
+  <button onclick="clearlist()">Clear List
+  </button>
 
 
 </body>
